--- a/1-Generate-data.ipynb
+++ b/1-Generate-data.ipynb
@@ -2,133 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "execution": {
-     "iopub.execute_input": "2022-03-28T03:49:23.391623Z",
-     "iopub.status.busy": "2022-03-28T03:49:23.391350Z",
-     "iopub.status.idle": "2022-03-28T03:49:23.408501Z",
-     "shell.execute_reply": "2022-03-28T03:49:23.407478Z",
-     "shell.execute_reply.started": "2022-03-28T03:49:23.391596Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/kaggle/input/venezia/venezia.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1985.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1996.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1993.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1992.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1986.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2009.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1988.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2013.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2005.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2001.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1990.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1984.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2012.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1983.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1997.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2003.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1989.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1987.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1995.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2015.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2004.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1994.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1999.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2006.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2010.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2000.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2007.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1991.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_1998.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2002.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2011.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2014.csv\n",
-      "/kaggle/input/venezia/Punta_Salute_1983_2015/Punta_Salute_2008.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load\n",
-    "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
-    "import os\n",
-    "# for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "#     for filename in filenames:\n",
-    "#         print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
-    "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-28T03:49:23.518287Z",
-     "iopub.status.busy": "2022-03-28T03:49:23.517998Z",
-     "iopub.status.idle": "2022-03-28T03:49:23.522983Z",
-     "shell.execute_reply": "2022-03-28T03:49:23.522296Z",
-     "shell.execute_reply.started": "2022-03-28T03:49:23.518258Z"
-    }
-   },
+   "execution_count": 1,
+   "id": "790af1ef-7916-4dce-94dd-82edbd7771e0",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import pickle\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "import tensorflow.keras.backend as K"
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-28T03:49:23.616991Z",
-     "iopub.status.busy": "2022-03-28T03:49:23.616113Z",
-     "iopub.status.idle": "2022-03-28T03:49:23.622896Z",
-     "shell.execute_reply": "2022-03-28T03:49:23.622253Z",
-     "shell.execute_reply.started": "2022-03-28T03:49:23.616939Z"
-    }
-   },
+   "execution_count": 2,
+   "id": "f4ea9343-feb9-46a7-b48c-617170cec004",
+   "metadata": {},
    "outputs": [],
    "source": [
     "config = {\n",
     "    \"N_PREV\": 90,\n",
     "    \"N_FWD\": 30,\n",
     "    \n",
-    "    \"ENCODER_SIZE\": 16,\n",
-    "    \"DECODER_SIZE\": 16,\n",
-    "    \n",
-    "    \"TEST_SIZE\": 0.1\n",
+    "    \"TEST_SIZE\": 0.15\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c5459caf-39e0-4d81-b9f4-551395c2f31d",
    "metadata": {},
    "source": [
     "## **Load DataFrame**"
@@ -136,16 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-28T03:49:23.669283Z",
-     "iopub.status.busy": "2022-03-28T03:49:23.668703Z",
-     "iopub.status.idle": "2022-03-28T03:49:24.080218Z",
-     "shell.execute_reply": "2022-03-28T03:49:24.078998Z",
-     "shell.execute_reply.started": "2022-03-28T03:49:23.669245Z"
-    }
-   },
+   "execution_count": 3,
+   "id": "8ba67470-1074-485b-9671-6d613b9586b9",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -211,13 +110,13 @@
        "4 1983-01-01 05:00:00    1.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('/kaggle/input/venezia/venezia.csv')\n",
+    "df = pd.read_csv('data/venezia.csv')\n",
     "df['datetime'] = pd.to_datetime(df['datetime'], infer_datetime_format=True)\n",
     "df.sort_values(by='datetime', inplace=True, ignore_index=True)\n",
     "df.head()"
@@ -225,6 +124,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bbf77e00-6284-4793-9bea-ba6c88e78b42",
    "metadata": {},
    "source": [
     "## **Analying Time Increments**"
@@ -232,7 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "id": "6137ec22-3127-41e6-9e84-e040f5e038c5",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
+   "id": "f9da6732-51f4-4574-be6e-268d1c192f38",
    "metadata": {},
    "outputs": [
     {
@@ -287,6 +189,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91836f51-59c1-4372-805f-7376e8988da5",
    "metadata": {},
    "source": [
     "## **Clean Zero Increments**"
@@ -294,7 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "id": "a1d14476-3502-4ae1-8acd-0cc45a983138",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +222,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>datetime</th>\n",
        "      <th>level</th>\n",
        "    </tr>\n",
@@ -326,31 +229,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>1983-01-01 01:00:00</td>\n",
        "      <td>44.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>1983-01-01 02:00:00</td>\n",
        "      <td>35.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>1983-01-01 03:00:00</td>\n",
        "      <td>23.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>1983-01-01 04:00:00</td>\n",
        "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>1983-01-01 05:00:00</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -359,15 +257,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   index            datetime  level\n",
-       "0      0 1983-01-01 01:00:00   44.0\n",
-       "1      1 1983-01-01 02:00:00   35.0\n",
-       "2      2 1983-01-01 03:00:00   23.0\n",
-       "3      3 1983-01-01 04:00:00   10.0\n",
-       "4      4 1983-01-01 05:00:00    1.0"
+       "             datetime  level\n",
+       "0 1983-01-01 01:00:00   44.0\n",
+       "1 1983-01-01 02:00:00   35.0\n",
+       "2 1983-01-01 03:00:00   23.0\n",
+       "3 1983-01-01 04:00:00   10.0\n",
+       "4 1983-01-01 05:00:00    1.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
+   "id": "594322cb-60a3-4b03-94e1-b5abdd9a5292",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
+   "id": "218b08bb-b85d-4d85-aead-9c10deb83884",
    "metadata": {},
    "outputs": [
     {
@@ -428,6 +328,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64ee9b51-9b01-429b-bad2-9c9a4ef3db1f",
    "metadata": {},
    "source": [
     "## **Data Functions**"
@@ -435,100 +336,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "808ef43e-70c6-4b7b-b4e4-b273d8e178ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_splits():\n",
     "    data = df.values\n",
     "    splits = []\n",
-    "    tss = TimeSeriesSplit(n_splits=5, test_size=int(df.shape[0]*config[\"TEST_SIZE\"]))\n",
+    "    tss = TimeSeriesSplit(n_splits=3, test_size=int(df.shape[0]*config[\"TEST_SIZE\"]))\n",
     "    for train_idxs, test_idxs in tss.split(data):\n",
     "        final_train_sample = train_idxs[-1]\n",
     "        final_test_sample = test_idxs[-1]\n",
     "        splits.append([final_train_sample, final_test_sample])\n",
     "    return splits\n",
     "\n",
+    "SPLITS = get_splits()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "60c1d8af-b079-46ba-aab1-130e70de8ea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_data(split):\n",
-    "    data = df.values\n",
+    "    data = df.level.values\n",
+    "    [final_train_sample, final_test_sample] = split\n",
+    "    normalizer = StandardScaler()\n",
+    "    normalizer.fit(data[:final_train_sample].reshape(-1,1))\n",
+    "    data = normalizer.transform(data.reshape(-1,1)).flatten()\n",
     "    X_train, y_train = [], []\n",
     "    X_val, y_val = [], []\n",
-    "    [final_train_sample, final_test_sample] = split\n",
     "    for i in range(final_train_sample-config[\"N_FWD\"]-config[\"N_PREV\"]):\n",
     "        X_train.append(data[i:i+config[\"N_PREV\"]])\n",
     "        y_train.append(data[i+config[\"N_PREV\"]:i+config[\"N_PREV\"]+config[\"N_FWD\"]])\n",
     "    for i in range(final_train_sample, final_test_sample-config[\"N_FWD\"]-config[\"N_PREV\"]):\n",
     "        X_val.append(data[i:i+config[\"N_PREV\"]])\n",
     "        y_val.append(data[i+config[\"N_PREV\"]:i+config[\"N_PREV\"]+config[\"N_FWD\"]])\n",
-    "    return np.array(X_train), np.array(y_train), np.array(X_val), np.array(y_val)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **Model Functions**"
+    "    return np.array(X_train), np.array(y_train), np.array(X_val), np.array(y_val), normalizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-28T03:50:19.375882Z",
-     "iopub.status.busy": "2022-03-28T03:50:19.375593Z",
-     "iopub.status.idle": "2022-03-28T03:50:20.865323Z",
-     "shell.execute_reply": "2022-03-28T03:50:20.864286Z",
-     "shell.execute_reply.started": "2022-03-28T03:50:19.375849Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "144636 173563\n",
-      "173563 202490\n",
-      "202490 231417\n",
-      "231417 260344\n",
-      "260344 289271\n"
-     ]
-    }
-   ],
-   "source": [
-    "def simple_encoder_decoder():\n",
-    "    inputs = tf.keras.layers.Input(shape=(config[\"N_PREV\"], 1))\n",
-    "    x, hidden_state, cell_state = tf.keras.layers.LSTM(config[\"ENCODER_SIZE\"], \n",
-    "                                                       return_sequences=True, \n",
-    "                                                       return_states=True, \n",
-    "                                                       recurrent_initializer='glorot_uniform', \n",
-    "                                                       activity_regularizer=L1L2(l1=0.000001, l2=0.000001))(inputs)\n",
-    "    \n",
-    "    decoder = tf.keras.layers.LSTM(config[\"DECODER_SIZE\"],\n",
-    "                                   return_sequences=True,\n",
-    "                                   return_states=True,\n",
-    "                                   recurrent_initializer='glorot_uniform', \n",
-    "                                   activity_regularizer=L1L2(l1=0.000001, l2=0.000001))\n",
-    "    decoder_output = tf.keras.layers.Dense(1)\n",
-    "    outputs = []\n",
-    "    last_value = inputs[:, -1, 1]\n",
-    "    states = [hidden_state, cell_state]\n",
-    "    for i in range(config[\"N_FWD\"]):\n",
-    "        x, hidden_state, cell_state = decoder([last_value], initial_state=states)\n",
-    "        states=[hidden_state, cell_state]\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "47407588-6836-4344-9d58-4000fc4931d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for fold, split in enumerate(SPLITS):\n",
+    "    X_train, y_train, X_val, y_val, normalizer = get_data(split)\n",
+    "    with open(f'./data/fold{fold+1}_data.npy', mode='wb') as f:\n",
+    "        np.save(f, X_train)\n",
+    "        np.save(f, y_train)\n",
+    "        np.save(f, X_val)\n",
+    "        np.save(f, y_val)\n",
+    "    with open(f'./data/fold{fold+1}_normalizer.pkl', mode='wb') as f:\n",
+    "        pickle.dump(normalizer, f)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1fa36c05-9dae-4fa9-9dba-d38700555b74",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -554,5 +425,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
