--- a/1-Generate-data.ipynb
+++ b/1-Generate-data.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "config = {\n",
-    "    \"N_PREV\": 90,\n",
+    "    \"N_PREV\": 60,\n",
     "    \"N_FWD\": 30,\n",
     "    \n",
     "    \"TEST_SIZE\": 0.15\n",
@@ -387,19 +387,19 @@
    "source": [
     "for fold, split in enumerate(SPLITS):\n",
     "    X_train, y_train, X_val, y_val, normalizer = get_data(split)\n",
-    "    with open(f'./data/fold{fold+1}_data.npy', mode='wb') as f:\n",
+    "    with open(f'./data/fold{fold+1}_data_v2.npy', mode='wb') as f:\n",
     "        np.save(f, X_train)\n",
     "        np.save(f, y_train)\n",
     "        np.save(f, X_val)\n",
     "        np.save(f, y_val)\n",
-    "    with open(f'./data/fold{fold+1}_normalizer.pkl', mode='wb') as f:\n",
+    "    with open(f'./data/fold{fold+1}_normalizer_v2.pkl', mode='wb') as f:\n",
     "        pickle.dump(normalizer, f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fa36c05-9dae-4fa9-9dba-d38700555b74",
+   "id": "0a1b47da-5fe8-4b7c-92ad-95d76d84b308",
    "metadata": {},
    "outputs": [],
    "source": []
