--- a/1-Generate-data.ipynb
+++ b/1-Generate-data.ipynb
@@ -331,7 +331,7 @@
    "id": "64ee9b51-9b01-429b-bad2-9c9a4ef3db1f",
    "metadata": {},
    "source": [
-    "## **Data Functions**"
+    "## **Create Multi-Step Data**"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
